Fix display overflow bug

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 .screen {
     flex: 1;
     background-color: #eb749c;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     margin-top: 15px;
     padding: 7px;
     border-radius: 10px;
@@ -43,7 +43,7 @@ body {
 }
 
 .all-buttons {
-    flex: 2 1 0;
+    flex: 3.1 1 0;
     display: flex;
     flex-direction: row;
     gap: 7px;
